--- a/custom_components/combined_notifications/translations/en.json
+++ b/custom_components/combined_notifications/translations/en.json
@@ -3,60 +3,12 @@
     "step": {
       "user": {
         "title": "Basic Settings",
-        "description": "Set up a name and default text.",
+        "description": "Set up a name and friendly sensor name for the notification.",
         "data": {
           "name": "Notification Name",
-          "text_all_clear": "Text when All Clear",
-          "friendly_sensor_name": "Friendly Sensor Name (Optional)"
+          "friendly_sensor_name": "Friendly Sensor Name (defaults to Notification Name if empty)",
+          "text_all_clear": "Text when All Clear"
         }
-      },
-      "appearance": {
-        "title": "Appearance Settings",
-        "description": "Configure colors and icons for the notification.",
-        "data": {
-          "background_color_all_clear": "Background Color (Clear)",
-          "background_color_alert": "Background Color (Alert)",
-          "text_color_all_clear": "Text Color (Clear)",
-          "text_color_alert": "Text Color (Alert)",
-          "icon_all_clear": "Icon (Clear)",
-          "icon_alert": "Icon (Alert)",
-          "icon_color_all_clear": "Icon Color (Clear)",
-          "icon_color_alert": "Icon Color (Alert)",
-          "hide_title": "Hide Title"
-        }
-      },
-      "add_condition": {
-        "title": "Add Condition",
-        "description": "Add an entity and define when it should trigger the notification.",
-        "data": {
-          "entity_id": "Entity",
-          "operator": "Operator",
-          "trigger_value": "Trigger Value",
-          "name": "Optional Label (defaults to entity_id)"
-        }
-      },
-      "confirm_conditions": {
-        "title": "Confirm Conditions",
-        "description": "Current conditions:\n{conditions}\n\nAdd another condition or create the notification?",
-        "data": {
-          "add_another": "Add another condition"
-        }
-      }
-    },
-    "error": {
-      "already_configured": "A notification with this name already exists.",
-      "no_conditions": "You must add at least one condition before continuing."
-    },
-    "abort": {
-      "already_configured": "A notification with this name already exists.",
-      "no_conditions": "Setup aborted: at least one condition is required."
-    }
-  },
-  "options": {
-    "step": {
-      "init": {
-        "title": "Combined Notifications Options",
-        "description": "Configure the appearance and conditions for the notification."
       },
       "appearance": {
         "title": "Appearance Settings",
@@ -79,7 +31,7 @@
       },
       "list_conditions": {
         "title": "Conditions",
-        "description": "Current conditions: {conditions}\n\nAdd, edit, or remove conditions.",
+        "description": "Current conditions: {conditions}\n\nAdd another condition or return to appearance settings.",
         "data": {
           "add_another": "Add another condition"
         }
@@ -104,6 +56,13 @@
           "name": "Optional Label (defaults to entity_id)"
         }
       }
+    },
+    "error": {
+      "already_configured": "A notification with this name already exists.",
+      "invalid_input": "Invalid input provided."
+    },
+    "abort": {
+      "already_configured": "A notification with this name already exists."
     }
   }
 }
