--- a/custom_components/combined_notifications/translations/en.json
+++ b/custom_components/combined_notifications/translations/en.json
@@ -6,34 +6,24 @@
         "description": "Set up a name and friendly sensor name for the notification.",
         "data": {
           "name": "Notification Name",
-          "friendly_sensor_name": "Friendly Sensor Name (defaults to Notification Name if empty)",
-          "text_all_clear": "Text when All Clear"
+          "friendly_sensor_name": "Friendly Sensor Name (defaults to Notification Name if empty)"
         }
       },
       "appearance": {
         "title": "Appearance Settings",
         "description": "Configure colors and icons for the notification.",
         "data": {
-          "background_color_all_clear": "Background Color (Clear)",
-          "background_color_alert": "Background Color (Alert)",
-          "text_color_all_clear": "Text Color (Clear)",
-          "text_color_alert": "Text Color (Alert)",
+          "text_all_clear": "Text when All Clear",
           "icon_all_clear": "Icon (Clear)",
-          "icon_alert": "Icon (Alert)",
+          "background_color_all_clear": "Background Color (Clear)",
+          "text_color_all_clear": "Text Color (Clear)",
           "icon_color_all_clear": "Icon Color (Clear)",
+          "hide_title": "Hide Title (Clear)",
+          "icon_alert": "Icon (Alert)",
+          "background_color_alert": "Background Color (Alert)",
+          "text_color_alert": "Text Color (Alert)",
           "icon_color_alert": "Icon Color (Alert)",
-          "hide_title": "Hide Title"
-        }
-      },
-      "conditions": {
-        "title": "Conditions",
-        "description": "Configure the conditions that trigger the notification."
-      },
-      "list_conditions": {
-        "title": "Conditions",
-        "description": "Current conditions: {conditions}\n\nAdd another condition or return to appearance settings.",
-        "data": {
-          "add_another": "Add another condition"
+          "hide_title_alert": "Hide Title (Alert)"
         }
       },
       "add_condition": {
@@ -46,6 +36,42 @@
           "name": "Optional Label (defaults to entity_id)"
         }
       },
+      "confirm_conditions": {
+        "title": "Confirm Conditions",
+        "description": "Current conditions:\n{conditions}\n\nAdd another condition or save.",
+        "data": {
+          "add_another": "Add another condition"
+        }
+      },
+      "menu": {
+        "title": "Options Menu",
+        "description": "Select an option for {name}.",
+        "data": {
+          "menu_option": "Option"
+        }
+      },
+      "basic_settings": {
+        "title": "Basic Settings",
+        "description": "Edit basic settings for {name}.",
+        "data": {
+          "text_all_clear": "Text when All Clear"
+        }
+      },
+      "manage_conditions": {
+        "title": "Manage Conditions",
+        "description": "Manage conditions for the notification.",
+        "data": {
+          "action": "Action"
+        }
+      },
+      "list_conditions": {
+        "title": "List Conditions",
+        "description": "Current conditions:\n{conditions}",
+        "data": {
+          "condition_index": "Condition",
+          "condition_action": "Action"
+        }
+      },
       "edit_condition": {
         "title": "Edit Condition",
         "description": "Edit the condition.",
@@ -53,15 +79,19 @@
           "entity_id": "Entity",
           "operator": "Operator",
           "trigger_value": "Trigger Value",
-          "name": "Optional Label (defaults to entity_id)"
+          "name": "Optional Label (defaults to entity_id)",
+          "index": "Condition Index"
         }
       }
     },
     "error": {
       "already_configured": "A notification with this name already exists.",
-      "invalid_input": "Invalid input provided."
+      "invalid_input": "Invalid input provided.",
+      "unknown": "An unexpected error occurred.",
+      "no_config_entry": "Configuration entry not found."
     },
     "abort": {
+      "no_conditions": "At least one condition must be added.",
       "already_configured": "A notification with this name already exists."
     }
   }
